[metadata]
name = prnu-python-DIFLAB-UNISA
version = 1.0.0
author = Luca Bondi, Paolo Bestagini, Nicolò Bonettini
author_email = luca.bondi@polimi.it, paolo.bestagini@polimi.it, nicolo.bonettini@polimi.it
description = Python porting of PRNU extractor and helper functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DIFLabUnisa/prnu-python
project_urls =
    Bug Tracker = https://github.com/DIFLabUnisa/prnu-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src