[metadata]
name = prnu-python
version = 1.0.2
author = Luca Bondi, Paolo Bestagini, Nicolò Bonettini, Andrea Bruno
author_email = luca.bondi@polimi.it, paolo.bestagini@polimi.it, nicolo.bonettini@polimi.it, andbruno@unisa.it
description = Python porting of PRNU extractor and helper functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DIFLabUnisa/prnu-python
project_urls =
    Bug Tracker = https://github.com/DIFLabUnisa/prnu-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pillow
    pywavelets
    scipy
    scikit-learn
    tqdm

[options.packages.find]
where = src
exclude = test